@@ -6,6 +6,7 @@ HBase Change Log
    HBASE-641   Improve master split logging
    HBASE-642   Splitting log in a hostile environment -- bad hdfs -- we drop
                write-ahead-log edits
+   HBASE-646   EOFException opening HStoreFile info file (spin on HBASE-645 and 550)
 
 Release 0.1.2 - 05/13/2008
 
